--- a/stokanchor/build.gradle
+++ b/stokanchor/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	implementation 'com.google.firebase:firebase-admin:6.12.2'
 	implementation 'com.sendgrid:sendgrid-java:4.0.1'
 	implementation 'com.google.cloud:google-cloud-kms:1.35.0'
+	// https://mvnrepository.com/artifact/joda-time/joda-time
+	implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
+
 	// https://mvnrepository.com/artifact/javax.mail/mail
 	implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
 
