🍀 added stellar.toml in application resources to be served as .well-known/stellar.toml

--- a/stokanchor/app.yaml
+++ b/stokanchor/app.yaml
@@ -3,4 +3,6 @@ env: flex
 
 handlers:
   - url: /.*
+  - url: /.well-known
+    static_dir: _well-known
     script: this field is required, but ignored
