--- a/stokanchor/build.gradle
+++ b/stokanchor/build.gradle
@@ -39,12 +39,14 @@ dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 	implementation 'com.google.firebase:firebase-admin:6.12.2'
 	implementation 'com.sendgrid:sendgrid-java:4.0.1'
-	implementation 'com.google.cloud:google-cloud-kms:1.35.0'
+	implementation 'com.google.cloud:google-cloud-kms:1.38.0'
 	// https://mvnrepository.com/artifact/joda-time/joda-time
 	implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
 	// https://mvnrepository.com/artifact/com.moandjiezana.toml/toml4j
 	implementation group: 'com.moandjiezana.toml', name: 'toml4j', version: '0.7.2'
-	implementation 'com.auth0:java-jwt:3.10.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
+
 
 
 	// https://mvnrepository.com/artifact/javax.mail/mail
@@ -52,7 +54,7 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.springframework/spring-context-support
 	implementation group: 'org.springframework', name: 'spring-context-support', version: '5.2.5.RELEASE'
-
+	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
