--- a/stokanchor/build.gradle
+++ b/stokanchor/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	implementation group: 'com.moandjiezana.toml', name: 'toml4j', version: '0.7.2'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
+	// https://mvnrepository.com/artifact/com.google.firebase/firebase-storage
+	implementation 'com.google.cloud:google-cloud-storage:1.106.0'
+
 
 
 
