--- a/stokanchor/build.gradle
+++ b/stokanchor/build.gradle
@@ -40,23 +40,18 @@ dependencies {
 	implementation 'com.google.firebase:firebase-admin:6.12.2'
 	implementation 'com.sendgrid:sendgrid-java:4.0.1'
 	implementation 'com.google.cloud:google-cloud-kms:1.38.0'
-	// https://mvnrepository.com/artifact/joda-time/joda-time
 	implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
-	// https://mvnrepository.com/artifact/com.moandjiezana.toml/toml4j
 	implementation group: 'com.moandjiezana.toml', name: 'toml4j', version: '0.7.2'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
-	// https://mvnrepository.com/artifact/com.google.firebase/firebase-storage
 	implementation 'com.google.cloud:google-cloud-storage:1.106.0'
-
-	// https://mvnrepository.com/artifact/javax.mail/mail
 	implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
-	// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
-
-	// https://mvnrepository.com/artifact/org.springframework/spring-context-support
 	implementation group: 'org.springframework', name: 'spring-context-support', version: '5.2.5.RELEASE'
 	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt
+	implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.1.0.RELEASE'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
