--- a/stokanchor/build.gradle
+++ b/stokanchor/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 	implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
 	implementation group: 'org.springframework', name: 'spring-context-support', version: '5.2.5.RELEASE'
-	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
+//	implementation 'com.google.cloud:google-cloud-pubsub:1.104.1'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt
 	implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.1.0.RELEASE'
 
