--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,22 @@
 *.zip
 *.tar.gz
 *.rar
+src/main/resources/_well-known/*
+src/main/resources/application-dev.properties
+src/main/resources/application-prod.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.gradle/6.3/executionHistory/executionHistory.bin
+.gradle/6.3/fileContent/
+.gradle/6.3/fileHashes/fileHashes.bin
+.gradle/6.3/javaCompile/
+.gradle/6.3/vcsMetadata-1/
+.gradle/buildOutputCleanup/outputFiles.bin
+build/generated/
+build/resources/main/static/
+build/resources/main/templates/
+build/tmp/compileJava/
+build/tmp/compileTestJava/
+src/main/resources/static/
+src/main/resources/templates/
