--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
 # Compiled class file
 *.class
 
@@ -21,6 +32,8 @@
 src/main/resources/_well-known/*
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
+build/*
+src/main/resources/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -37,3 +50,5 @@ build/tmp/compileJava/
 build/tmp/compileTestJava/
 src/main/resources/static/
 src/main/resources/templates/
+.gradle/6.3/fileHashes/resourceHashesCache.bin
+src/main/generated/
