--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 src/main/resources/_well-known/*
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
+anchor.toml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -50,3 +51,9 @@ src/main/resources/static/
 src/main/resources/templates/
 .gradle/6.3/fileHashes/resourceHashesCache.bin
 src/main/generated/
+.gradle/checksums/md5-checksums.bin
+.gradle/checksums/sha1-checksums.bin
+bin/main/templates/
+build/
+out/production/classes/META-INF/
+out/production/resources/
