--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,2 +1,7 @@
 spring.profiles.active=dev
 logging.level.web=DEBUG
+server.error.whitelabel.enabled=true
+#spring.application.name=Anchor Network Services
+#spring.sendgrid.api-key=jhgkjhg
+
+
