--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 	implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.1.0.RELEASE'
 
 	// https://mvnrepository.com/artifact/black.door/hate
-	implementation group: 'black.door', name: 'hate', version: 'v1r4t5'
+//	implementation group: 'black.door', name: 'hate', version: 'v1r4t5'
 
 }
 
